<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />
    <item android:id="@+id/accountsFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_accounts" />
    <item android:id="@+id/transactionsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_transactions" />
    <item android:id="@+id/categoriesFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_categories" />
    <item android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
